# fast_rnnt

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: pybind11.cmake
fast_rnnt/csrc/: CMakeLists.txt  mutual_information.h  mutual_information_cuda.cu
fast_rnnt/python/csrc/: CMakeLists.txt  mutual_information.cu
fast_rnnt/python/fast_rnnt/: __init__.py
fast_rnnt/python/tests/: mutual_information_test.py  rnnt_loss_test.py
